# nikerunbot

./: .env  .gitignore  pyproject.toml  requirements.txt
.github/workflows/: check-nike-run.yml
src/: check.py  main.py  nikerunbot.py
src/storage/: chat_ids.txt
