[project]
name = "nikerunbot"
version = "0.1.0"
description = "\"Bot de telegram para detectar cupos en nike run buenos aires\""
authors = [
    {name = "jperezdelcerro",email = "pdcjosefina@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"

[tool.poetry.scripts]
nikerunbot = "src.main:main"